delete todo and dispose

--- a/style.css
+++ b/style.css
@@ -314,11 +314,11 @@ select:focus {
 
 .todo-item {
     padding: 20px;
-    background-color: var(--background-200);
+    outline: 2px solid var(--background-200);
     border-radius: 10px;
     cursor: pointer;
 }
 
 .todo-item:hover {
-    background-color: var(--primary);
+    outline: 2px solid var(--primary);
 }
