--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 
 /* General Syles */
 
-body {
+#app {
     display: grid;
     grid-template-columns: 250px 1fr;
     grid-template-areas: 'sidebar content';
@@ -303,6 +303,7 @@ select:focus {
 }
 
 .icon {
+    display: flex;
     padding: 0.5rem;
     border-radius: 100px;
     cursor: pointer;
