--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@
 
 #app {
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 1fr;
     grid-template-areas: 'sidebar content';
     height: 100vh;
     background-color: var(--background);
